# forge-armory

./: .env.example  .gitignore  ADMIN_UI_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  alembic.ini  pyproject.toml
admin-ui/: index.html  package.json  vite.config.ts
admin-ui/src/: App.vue  main.ts
admin-ui/src/api/: client.ts
admin-ui/src/assets/: styles.css
admin-ui/src/components/layout/: Header.vue  Sidebar.vue
admin-ui/src/components/metrics/: TimePeriodSelector.vue
admin-ui/src/composables/: useTheme.ts
admin-ui/src/router/: index.ts
admin-ui/src/types/: index.ts
admin-ui/src/views/: BackendsView.vue  DashboardView.vue  MetricsView.vue  ToolsView.vue
alembic/: env.py
alembic/versions/: 20241201_0000_000_initial_schema.py  20260110_2200_001_add_request_context_fields.py
src/forge_armory/: __init__.py  __main__.py  cli.py  server.py  settings.py
src/forge_armory/admin/: __init__.py  routes.py  schemas.py
src/forge_armory/db/: __init__.py  engine.py  models.py  repository.py
src/forge_armory/gateway/: __init__.py  connection.py  exceptions.py  manager.py
tests/: __init__.py  conftest.py  test_admin.py  test_cli.py  test_db.py  test_gateway.py  test_integration.py
