[project]
name = "forge-armory"
version = "0.1.0"
description = "MCP protocol gateway - aggregates tools from multiple MCP servers"
readme = "README.md"
authors = [
    { name = "Kashif Iftikhar", email = "kashif@compulife.com.pk" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.0",
    "httpx>=0.28.1",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.34.0",
    "fastapi>=0.115.0",
]

[project.scripts]
armory = "forge_armory.cli:app"

[build-system]
requires = ["uv_build>=0.6.0,<0.7.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "basedpyright>=1.22.0",
    "pre-commit>=4.0.0",
    "detect-secrets>=1.5.0",
    "aiosqlite>=0.20.0",
    "watchfiles>=1.0.0",
]

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "RUF022",   # __all__ not sorted (we prefer logical grouping)
]

[tool.ruff.lint.per-file-ignores]
# Allow import inside function for lazy loading / circular import avoidance
"src/forge_armory/cli.py" = ["PLC0415"]
"src/forge_armory/server.py" = ["PLC0415"]
"src/forge_armory/db/engine.py" = ["PLC0415"]
"alembic/*" = ["PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["forge_armory"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ============================================================================
# Pyright Configuration
# ============================================================================
[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["**/__pycache__", ".venv", "tests", "alembic"]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: marks tests as integration tests (may call external APIs)",
]

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["src/forge_armory"]
branch = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
